    o input_color and @Input.color accepts a default color argument
    o input_color and @Input.color accepts a default color argument
    o fix "exit" command
    o make a="Label1"; a.setText("foo") work
    o make dcopid, pid, parentPid work in the new parser
    o make TreeWidget.selection work in multi selection mode
    o add setCellWidget/cellWidget for Table
    o add setEditable(bool) for widgets that are editable
    o add PopupMenu widget
    o add ToolBox widget
    o add AboutDialog widget
    o quote the strings inserted via function browser
    o use combobox for booleans in the function browser
    o use multiline insert box in function browser
    o add highlighting for the new parser
    o use the new parser by default for new dialogs 
    o make possible to open more associated editors at once 
    o fix problem with losing the parser type status in the editor when working with multiple dialogs
    o @Array.fromString should append the new elements to the array, just like
      it did before and how array_fromString does.
    o fix @eval for addition/substraction and handle division by zero
    o process code written in external script using the old parser 
    o make it possible to run external script in a ScriptObject
    o "execute" DCOP call returns a string
    o support shebang (#!/path_to/kmdr-executor) in the beginning of the .kmdr files. 
      Running .kmdr files is possible directly if you make them executable.
    o store Kommander version in the VERSION/_VERSION global variable
    o the editor does not save the dialog on running
    o warn if a dialog file is not executable
    o create backup files every 5 minutes
    o add experimental Kommander KPart
    o rework the plugin system
    o bump version to 1.3

Wed Jan 9 21:35:38 2008 - Andras Mantia <amantia@kde.org>
    o add Table.selection to get back the selection coordinates

Sun Dec 30 00:02:34 2007 - Andras Mantia <amantia@kde.org>